--- a/LabTwo/ThirdPart/formHTML.html
+++ b/LabTwo/ThirdPart/formHTML.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="formCSS.css">
     <title>Document</title>
 </head>
 
 <body>
     <h1>Github Form</h1> 
     <form>
-        <input type="text" id="githubName" value="">
-        <button type="button" id="searchBtn" onclick="getUsers">Search</button>
+        <div class="imgDiv">
+            <input class="searchBar" type="text" id="githubName" value="">
+            <button class="searchButton" type="button" id="searchBtn" onclick="getUsers">Search</button><br>
+        </div>
         <br>
-        <img id="photo" >
+        <img  class="photo" id="photo" >
         <br>
-        <div id="output"></div>
-        <br>
-        <div id="repos"></div>
+        <div class="outputDiv">
+            <div class="output" id="output"></div>
+            <br>
+            <div class="repos" id="repos"></div>
+        </div>
+        
     </form>  
     <script src="formjavascript.js"></script> 
 </body>
